--- a/src/Fiotec.QuestPDF.Application/Fiotec.QuestPDF.Application.csproj
+++ b/src/Fiotec.QuestPDF.Application/Fiotec.QuestPDF.Application.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Services\" />
+    <ProjectReference Include="..\Fiotec.QuestPDF.Domain\Fiotec.QuestPDF.Domain.csproj" />
   </ItemGroup>
 
 </Project>
